--- a/tpls/notelist.html
+++ b/tpls/notelist.html
@@ -48,8 +48,8 @@
             <td class="col-md-1 tdb"><p class="td">{{item.star}}</td>
             <td class="col-md-1 tdb"><p class="td">{{item.tag}}</td>
             <td class="col-md-2">
-              <button type="button" class="btn btn-default tablebtn1" ng-click="edit(item)"><span class="glyphicon glyphicon-pencil"></span>编辑</button>
-              <button type="button" class="btn btn-default tablebtn2" ng-click="delete(item)"><span class="glyphicon glyphicon-remove-sign"></span>删除</button>
+              <button type="button" class="btn btn-default tablebtn1" ng-click="edit(item,this)"><span class="glyphicon glyphicon-pencil"></span>编辑</button>
+              <button type="button" class="btn btn-default tablebtn2" ng-click="delete(item,this)"><span class="glyphicon glyphicon-remove-sign"></span>删除</button>
             </td>
           </tr>
         </tbody>
