--- a/tpls/learningdetial.html
+++ b/tpls/learningdetial.html
@@ -9,10 +9,11 @@
   .listview{
     background: white;
     border-radius: 10px;
-    width: 700px;
+    width: 85%;
     height: 900px;
     float: left;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
+    overflow: hidden;
   }
   .linkview{
     background: white;
