--- a/tpls/notelist.html
+++ b/tpls/notelist.html
@@ -9,9 +9,11 @@
   .listview{
     background: white;
     border-radius: 10px;
-    width: 900px;
+    width: 85%;
     height: 900px;
     float: left;
+    margin-bottom: 60px;
+    overflow: hidden;
   }
   .td{
     text-align: center;
