--- a/tpls/learningdetial.html
+++ b/tpls/learningdetial.html
@@ -4,7 +4,7 @@
     margin-bottom: 30px;
   }
   .main{
-    margin-left: 60px;
+    margin-left: 5%;
   }
   .listview{
     background: white;
@@ -39,10 +39,9 @@
   }
   .brief{
     margin-top:30px;
-    width:100%;
+    width:95%;
     height:80px;
     background:rgb(247,247,247);
-    /*margin-left: 15%;*/
   }
   .lines{
     width:5px;
