--- a/tpls/note.html
+++ b/tpls/note.html
@@ -10,10 +10,19 @@
     background: white;
     border-radius: 10px;
     width: 85%;
-    height: 900px;
     float: left;
-    margin-bottom: 60px;
     overflow: hidden;
+  }
+
+  /* 页面内容 */
+  .viewcontent{
+    margin:30px 30px;
+    margin-bottom: 10px;
+  }
+  .fixInputTag{
+    background:rgb(73,192,220);
+    color:white;
+    border-color: rgb(73,192,220);
   }
 
   .leftinput{
@@ -35,17 +44,17 @@
 
   <h2 class="titles">随身笔记</h2>
 
-  <div class="">
-    <div class="listview">
+  <div class="listview">
 
+    <div class="viewcontent">
       <!-- 标题和简介部分 -->
       <div class="group">
         <div class="input-group leftinput">
-            <span class="input-group-addon">标题</span>
+            <span class="input-group-addon fixInputTag">标题</span>
             <input type="text" class="form-control" placeholder="请输入文章标题(必须)" ng-model="title">
         </div>
         <div class="input-group rightinput">
-            <span class="input-group-addon">简介</span>
+            <span class="input-group-addon fixInputTag">简介</span>
             <input type="text" class="form-control" placeholder="请输入简介" ng-model="brief">
         </div>
       </div>
@@ -56,14 +65,18 @@
 
       <!-- 标签部分 -->
       <div class="group group ">
+        <div class="input-group leftinput">
+            <span class="input-group-addon fixInputTag">分类</span>
+            <input type="text" class="form-control" placeholder="请选择文章分类" ng-model="category">
+        </div>
         <div class="input-group rightinput">
-            <span class="input-group-addon">标签</span>
-            <input type="text" class="form-control leftinput" placeholder="请选择文章标签" ng-model="tag">
+            <span class="input-group-addon fixInputTag">标签</span>
+            <input type="text" class="form-control" placeholder="请选择文章标签" ng-model="tag">
         </div>
       </div>
 
       <div class="clearfix"></div>
-      <div class="" style="width:100%;height:10px;"></div>
+      <div class="" style="width:100%;height:30px;"></div>
       <!-- 标签部分 -->
 
       <!-- 按钮部分 -->
@@ -94,8 +107,7 @@
         <button type="button" class="btn btn-default mybtn" ng-click="backtolist()">返回列表</button>
       </div>
       <div class="clearfix"></div>
-      <div class="" style="width:100%;height:50px;"></div>
+      <div class="" style="width:100%;"></div>
       <!-- 保存部分 -->
     </div>
-  </div>
 </div>
