--- a/tpls/notelist.html
+++ b/tpls/notelist.html
@@ -3,14 +3,10 @@
     margin-top: 60px;
     margin-bottom: 30px;
   }
-  .main{
-    margin-left: 60px;
-  }
   .listview{
     background: white;
     border-radius: 10px;
     width: 85%;
-    height: 900px;
     float: left;
     margin-bottom: 60px;
     overflow: hidden;
@@ -19,9 +15,6 @@
     text-align: center;
     margin-top: 10px;
   }
-  /* .cell{
-    cursor: pointer;
-  } */
 </style>
 
 <div class="main animated fadeInRight">
@@ -31,7 +24,8 @@
   <div class="">
     <div class="listview">
 
-      <table class="table table-responsive table-hover table-bordered text-left">
+
+      <!-- <table class="table table-responsive table-hover table-bordered text-left">
         <thead>
           <tr>
             <th class="col-md-1 tdb">序号</th>
@@ -55,7 +49,7 @@
             </td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
     </div>
   </div>
 </div>
