--- a/tpls/index.html
+++ b/tpls/index.html
@@ -1,43 +1,27 @@
 <style media="screen">
-  .titles{
-    margin-top: 60px;
-    margin-bottom: 30px;
-  }
-  .main{
-    margin-left: 60px;
-  }
-  /* .indexlistcell{
-    cursor: pointer;
-  } */
-  /* .indexlistcell:hover{
-    background: rgb(245,245,245);
-  } */
-
   .listview{
     background: white;
     border-radius: 10px;
-    width: 85%;
-    height: 900px;
+    width: 65%;
     float: left;
     margin-bottom: 60px;
     overflow: hidden;
   }
-  .linkview{
-    background: white;
-    border-radius: 10px;
-    width: 310px;
-    height: 200px;
+  /* 标题部分 */
+  .titles{
+    margin-top: 60px;
+    margin-bottom: 30px;
     float: left;
-    margin-left: 30px;
-    overflow: hidden;
   }
-  .line2{
-    width: 100%;
-    background: black;
-    height: 2px;
+  /* 搜索栏部分 */
+  .search{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-right: 34%;
+    float: right;
   }
 
-  /*cell*/
+  /*列表项目*/
   .listcellimg{
     width: 100px;
     height: 100px;
@@ -116,6 +100,19 @@
   <h2 class="titles">学习记录</h2>
   <!-- 标题 -->
 
+  <!-- 搜索 -->
+  <div class="search">
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+          <input type="text" class="form-control" placeholder="输入要搜索内容" ng-model="searchtext">
+      </div>
+      <button type="submit" class="btn btn-default" ng-click="search()">搜索</button>
+    </form>
+  </div>
+  <!-- 搜索 -->
+
+  <div class="clearfix"></div>
+
   <div class="">
 
     <!-- 列表界面 -->
@@ -182,12 +179,8 @@
     </div>
     <!-- 列表界面 -->
 
-    <!-- 右侧导航界面 -->
-    <!-- <div class="linkview">
-      <div class="line2">
-
-      </div>
-    </div> -->
-    <!-- 右侧导航界面 -->
+    <!-- 快速导航页面 -->
+    <linkview class="animated fadeInRight" ng-controller="linkview"></linkview>
+    <!-- 快速导航页面 -->
   </div>
 </div>
