--- a/tpls/notelist.html
+++ b/tpls/notelist.html
@@ -2,6 +2,7 @@
   .titles{
     margin-top: 60px;
     margin-bottom: 30px;
+    float: left;
   }
   .listview{
     background: white;
@@ -11,9 +12,65 @@
     margin-bottom: 60px;
     overflow: hidden;
   }
-  .td{
-    text-align: center;
+
+  /* 搜索栏部分 */
+  .search{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-right: 14%;
+    float: right;
+  }
+
+  .listCellLeft{
+    float: left;
+    margin-left: 15px;
+  }
+  .year{
+    font-size: 22px;
+    color: #333;
     margin-top: 10px;
+    margin-bottom: -5px;
+  }
+  .month{
+    font-size: 12px;
+    color: #333;
+  }
+
+  .listCellRight{
+    float: left;
+    margin-left: 20px;
+  }
+  .title{
+    font-size: 25px;
+    color: black;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  .title:hover{
+    color: rgb(255, 195, 63);
+  }
+  .brief{
+    font-size: 15px;
+    color: #808080;
+    margin-bottom: 25px;
+  }
+  .noteListSepLine{
+    margin-left: 80px;
+    width: 90%;
+    height: 2px;
+    background: #ddd;
+  }
+
+  .buttonView{
+    width: 60px;
+    float: right;
+    margin-right: 30px;
+  }
+  .mybtn{
+    margin-top: 40px;
+    float: right;
+
   }
 </style>
 
@@ -21,35 +78,54 @@
 
   <h2 class="titles">笔记管理</h2>
 
+  <!-- 搜索 -->
+  <div class="search">
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+          <input type="text" class="form-control" placeholder="输入要搜索内容" ng-model="searchtext">
+      </div>
+      <button type="submit" class="btn btn-default" ng-click="search()">搜索</button>
+    </form>
+  </div>
+  <!-- 搜索 -->
+
   <div class="">
     <div class="listview">
 
+      <!-- 列表项目 -->
+      <div ng-repeat="item in list">
+        <!-- time -->
+        <div class="listCellLeft">
+          <p class="year">{{item.year}}</p>
+          <p class="month">{{item.month}}</p>
+        </div>
+        <!-- time -->
 
-      <!-- <table class="table table-responsive table-hover table-bordered text-left">
-        <thead>
-          <tr>
-            <th class="col-md-1 tdb">序号</th>
-            <th class="col-md-4 tdb">文章标题</th>
-            <th class="col-md-2 tdb">发布时间</th>
-            <th class="col-md-1 tdb">浏览量</th>
-            <th class="col-md-1 tdb">标签</th>
-            <th class="col-md-2 tdb">操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="cell" ng-repeat="item in list">
-            <td class="col-md-1 tdb"><p class="td">{{$index}}</p></td>
-            <td class="col-md-4 tdb"><p class="td">{{item.title}}</p></td>
-            <td class="col-md-2 tdb"><p class="td">{{item.datetime}}</p></td>
-            <td class="col-md-1 tdb"><p class="td">{{item.star}}</td>
-            <td class="col-md-1 tdb"><p class="td">{{item.tag}}</td>
-            <td class="col-md-2">
-              <button type="button" class="btn btn-default tablebtn1" ng-click="edit(item,this)"><span class="glyphicon glyphicon-pencil"></span>编辑</button>
-              <button type="button" class="btn btn-default tablebtn2" ng-click="delete(item,this)"><span class="glyphicon glyphicon-remove-sign"></span>删除</button>
-            </td>
-          </tr>
-        </tbody>
-      </table> -->
+        <!-- time 和 brief -->
+        <div class="listCellRight">
+          <p class="title" ng-click="edit(item)">{{item.title}}</p>
+          <p class="brief">{{item.brief}}</p>
+        </div>
+        <!-- time 和 brief -->
+
+        <!-- 按钮 -->
+        <div class="buttonView">
+          <button type="submit" class="btn btn-default mybtn" ng-click="delete(item)">
+            删除
+          </button>
+        </div>
+        <!-- 按钮 -->
+
+        <!-- 清除浮动 -->
+        <div class="clearfix"></div>
+
+        <div class="noteListSepLine"></div>
+      </div>
+      <!-- 列表项目 -->
+
+      <!-- 分页 -->
+      <navigatior class="animated fadeInUp" style="margin-top:30px;"></navigatior>
+      <!-- 分页 -->
     </div>
   </div>
 </div>
