--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
         <div class="webleft">
 
           <!-- 用户头像 -->
-          <img class="userimg" src="imgs/logo.jpg" alt="头像">
+          <img class="userimg" ng-src="{{usrimg}}" alt="头像" ng-click="login(1)">
           <!-- 用户头像 -->
 
           <!-- 用户名 -->
-          <h2 class="usertitle">pliro</h2>
+          <h2 class="usertitle" ng-click="login(0)">{{usrname}}</h2>
           <!-- 用户名 -->
 
           <!-- 清除浮动 -->
@@ -83,13 +83,44 @@
         <!-- 手机端显示的界面 -->
         <div class="leftview-mobile">
 
-
         </div>
         <!-- 手机端显示的界面 -->
 
         <!-- 显示当前日期 -->
         <p class="datetime">{{datetime}}</p>
         <!-- 显示当前日期 -->
+
+        <!-- 模态框（Modal） -->
+        <div class="modal fade" id="loginView" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">登录</h4>
+                    </div>
+
+                    <div class="modal-body">
+                      <div class="input-group">
+                          <span class="input-group-addon">用户名</span>
+                          <input type="text" class="form-control" ng-model="username">
+                      </div>
+
+                      <div class="" style="margin-top:15px;"></div>
+
+                      <div class="input-group">
+                          <span class="input-group-addon">密码</span>
+                          <input type="text" class="form-control" ng-model="password">
+                      </div>
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="button" class="btn btn-primary" ng-click="doLogin()">登录</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal -->
+        </div>
       </div>
       <!-- 左侧导航界面 -->
 
