--- a/tpls/index.html
+++ b/tpls/index.html
@@ -137,8 +137,8 @@
           <!-- cell底部，包括用户头像，用户名称，时间，评论赞等 -->
           <div class="celrightbottom">
             <img class="celluserimg" ng-src="{{item.usrimg}}" alt="">
-            <span class="cellname">{{item.username}}</span>
-            <span class="celldate">{{item.date}}</span>
+            <span class="cellname">{{item.usrname}}</span>
+            <span class="celldate">{{item.datetime}}</span>
             <span class="celltime">{{item.time}}</span>
 
             <!-- 评论，赞等 -->
