添加登录功能

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="webleft">
 
           <!-- 用户头像 -->
-          <img class="userimg" ng-src="{{usrimg}}" alt="头像" ng-click="login(1)">
+          <img class="userimg" ng-src="{{usrimg}}" ng-click="login(1)">
           <!-- 用户头像 -->
 
           <!-- 用户名 -->
