--- a/tpls/index.html
+++ b/tpls/index.html
@@ -122,7 +122,7 @@
       <div class="indexlistcell" ng-mouseover="over(item)" ng-mouseleave="leave(item)" ng-repeat="item in list">
 
         <!-- cell图片 -->
-        <img class="listcellimg" ng-src="{{item.img}}" alt="">
+        <img class="listcellimg" ng-src="{{item.pic}}" alt="">
         <!-- cell图片 -->
 
         <div class="cellright">
