--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <script src='http://120.78.131.83/progman/js/ngcontroller/controller.js' charset='utf-8'></script>
     <script src='http://120.78.131.83/progman/js/app.js' charset='utf-8'></script>
   </head>
-  <body ng-app="app">
+  <body ng-app="app" ng-controller="navview">
     <div class="page">
 
       <!-- 左侧导航界面 -->
-      <div class="leftview-web" ng-controller="navview">
+      <div class="leftview-web">
 
         <!-- 电脑显示的界面 -->
         <div class="webleft">
