修改详情页的排版

--- a/tpls/learningdetial.html
+++ b/tpls/learningdetial.html
@@ -62,6 +62,9 @@
     margin-top: 30px;
     margin-bottom: 30px;
   }
+  #content{
+    margin-right: 20px;
+  }
 </style>
 
 <div class="main animated fadeInRight">
