--- a/tpls/index.html
+++ b/tpls/index.html
@@ -104,7 +104,7 @@
   <div class="search">
     <form class="navbar-form navbar-left" role="search">
       <div class="form-group">
-          <input type="text" class="form-control" placeholder="输入要搜索内容" ng-model="searchtext">
+          <input type="text" class="form-control" placeholder="标题，标签" ng-model="searchtext">
       </div>
       <button type="submit" class="btn btn-default" ng-click="search()">搜索</button>
     </form>
