--- a/tpls/myproject.html
+++ b/tpls/myproject.html
@@ -1,35 +1,163 @@
 <style media="screen">
-  .titles{
-    margin-top: 60px;
-    margin-bottom: 30px;
-  }
   .listview{
     background: white;
     border-radius: 10px;
-    width: 85%;
+    width: 65%;
     float: left;
     margin-bottom: 60px;
     overflow: hidden;
   }
+  /* 标题部分 */
+  .titles{
+    margin-top: 60px;
+    margin-bottom: 30px;
+    float: left;
+  }
+  /* 搜索栏部分 */
+  .search{
+    margin-top: 50px;
+    margin-bottom: 30px;
+    margin-right: 34%;
+    float: right;
+  }
 
-  /*cell*/
+  /*列表项目*/
   .listcellimg{
     width: 100px;
     height: 100px;
-    background: red;
+    float: left;
+    margin-left: 5%;
+    margin-right: 30px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+  }
+  .cellright{
+    float: left;
+    width: 45%;
+  }
+  .line3{
+    margin-left: 5%;
+    width: 90%;
+    height: 1px;
+    background: rgb(218, 218, 218);
+  }
+
+  .celrighttop{
+    margin-top: 25px;
+  }
+  .celltiles{
+    font-size: 25px;
+    cursor: pointer;
+  }
+  .celldetial{
+    margin-top: -10px;
+    font-size: 15px;
+    color: rgb(122, 122, 122);
+    cursor: pointer;
+    margin-bottom: 40px;
+  }
+  .celltitleactive{
+    color: rgb(255, 195, 63);
+  }
+  .celltitleactive2{
+    color: rgb(122, 122, 122);
+  }
+  .celltitledeactive{
+    color: black;
+  }
+  .buttonView{
+    width: 60px;
+    float: right;
+    margin-right: 30px;
+    margin-top: 20px;
+  }
+  .mybtn{
+    margin-top: 40px;
+    float: right;
   }
 </style>
 
 <div class="main animated fadeInRight">
 
+  <!-- 标题 -->
   <h2 class="titles">我的项目</h2>
+  <!-- 标题 -->
+
+  <!-- 搜索 -->
+  <div class="search">
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+          <input type="text" class="form-control" placeholder="标题，标签" ng-model="searchtext">
+      </div>
+      <button type="submit" class="btn btn-default" ng-click="search()">搜索</button>
+    </form>
+  </div>
+  <!-- 搜索 -->
+
+  <div class="clearfix"></div>
 
   <div class="">
+
+    <!-- 列表界面 -->
     <div class="listview">
 
-      <div class="indexlistcell">
-        asdfasdf
+      <!-- cell -->
+      <div class="indexlistcell" ng-mouseover="over(item)" ng-mouseleave="leave(item)" ng-repeat="item in list">
+
+        <!-- cell图片 -->
+        <img class="listcellimg" ng-src="{{item.img}}" alt="">
+        <!-- cell图片 -->
+
+        <div class="cellright">
+
+          <!-- cell头部，包括标题和摘要 -->
+          <div class="celrighttop" ng-click="click(item)">
+            <p class="celltiles" ng-class="{2:'celltitleactive2',1:'celltitleactive',0:'celltitledeactive'}[item.active]"><strong>{{item.title}}</strong></p>
+            <p class="celldetial">正在进行的项目：{{item.lastItem}}</p>
+          </div>
+          <!-- cell头部，包括标题和摘要 -->
+
+          <div class="progress progress-striped active">
+            <div id="progressBar" class="progress-bar progress-bar-success progress" role="progressbar"
+                 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
+                 style="width: 100%;">
+            </div>
+            <span style="margin-left: 10px;">{{item.progress}}</span>
+          </div>
+        </div>
+
+        <!-- 按钮 -->
+        <div class="buttonView">
+          <button type="submit" class="btn btn-danger mybtn" ng-click="delete(item)">
+            删除
+          </button>
+        </div>
+        <!-- 按钮 -->
+
+        <!-- 按钮 -->
+        <div class="buttonView">
+          <button type="submit" class="btn btn-default mybtn" ng-click="edit(item)">
+            编辑
+          </button>
+        </div>
+        <!-- 按钮 -->
+
+        <div class="clearfix"></div>
+
+        <div class="line3"></div>
+
       </div>
+      <!-- cell -->
+
+      <!-- 分页 -->
+      <navigatior class="animated fadeInUp" style="margin-top:30px;"></navigatior>
+      <!-- 分页 -->
     </div>
+    <!-- 列表界面 -->
+
+    <!-- 快速导航页面 -->
+    <!-- <linkview class="animated fadeInRight" ng-controller="linkview"></linkview> -->
+    <!-- 快速导航页面 -->
   </div>
 </div>
