--- a/tpls/myproject.html
+++ b/tpls/myproject.html
@@ -119,11 +119,10 @@
           <!-- cell头部，包括标题和摘要 -->
 
           <div class="progress progress-striped active">
-            <div id="progressBar" class="progress-bar progress-bar-success progress" role="progressbar"
-                 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"
-                 style="width: 100%;">
+            <div class="progress-bar progress-bar-success progress" role="progressbar"
+                 aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
             </div>
-            <span style="margin-left: 10px;">{{item.progress}}</span>
+            <span style="margin-left: 10px;">已完成:{{item.progress}}%</span>
           </div>
         </div>
 
